fix(Toolbar): add z-index

--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -32,6 +32,7 @@
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.14);
   font-family: var(--toolbar-font-family);
   justify-content: flex-start;
+  z-index: var(--z-index-toolbar);
 }
 
 /* Layout */
